recipe-app/ingress/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    labels:
      app: recipe-app
    name: gke-ingress
    namespace: recipe-app
    annotations:
      kubernetes.io/ingress.class: gce
      kubernetes.io/ingress.allow-http: "true"
      kubernetes.io/ingress.global-static-ip-name: ginger
      # cert-manager.io/issuer: letsencrypt-production
  spec:
    ingressClassName: "gce"
    defaultBackend:
      service:
        name: recipe-app
        port:
          number: 80
    rules:
    - host: "recipes.tscrond.com"
      http:
        paths:
        - path: "/*"
          pathType: ImplementationSpecific
          backend:
            service:
              name: recipe-app
              port:
                number: 80
