recipe-app/ingress/patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
    - secretName: web-ssl
      hosts:
        - recipes.tscrond.com
